[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/Scripts/OnlineMenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Fonts/OpenSans/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/Fonts/MenuFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[node name="OnlineMenu" type="ColorRect"]
margin_left = 480.0
margin_top = 32.0
margin_right = 864.0
margin_bottom = 504.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 666.405 ]
}

[node name="OptimistLabel" type="Label" parent="."]
visible = false
margin_top = 64.0
margin_right = 384.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 1 )
text = "It's good to be an optimist"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="OptimistLabel"]

[node name="OnlineLabel" type="Label" parent="."]
margin_right = 384.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "Online"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostOptions" type="GridContainer" parent="."]
margin_left = 86.073
margin_top = 88.0
margin_right = 293.073
margin_bottom = 141.0
custom_constants/hseparation = 12
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostBox" type="CheckBox" parent="HostOptions"]
margin_right = 105.0
margin_bottom = 53.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Host"

[node name="JoinBox" type="CheckBox" parent="HostOptions"]
margin_left = 117.0
margin_right = 207.0
margin_bottom = 53.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Join"
align = 2

[node name="HostOptions2" type="GridContainer" parent="."]
margin_left = 32.0
margin_top = 189.0
margin_right = 352.0
margin_bottom = 293.0
custom_constants/hseparation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HostOptions2"]
margin_right = 320.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
text = "IP Address:"

[node name="TextEdit" type="LineEdit" parent="HostOptions2"]
margin_top = 49.0
margin_right = 320.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "76.91.198.218"
max_length = 15
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "IP Address"
caret_blink = true

[node name="Buttons" type="GridContainer" parent="."]
margin_left = 32.0
margin_top = 328.0
margin_right = 352.0
margin_bottom = 438.0
custom_constants/vseparation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceButton" type="Button" parent="Buttons"]
margin_right = 320.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
disabled = true
shortcut_in_tooltip = false
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="Buttons"]
margin_top = 59.0
margin_right = 320.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
action_mode = 0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="OptimistLabel/Timer" to="." method="_unoptimist"]
[connection signal="pressed" from="HostOptions/HostBox" to="." method="_host"]
[connection signal="pressed" from="HostOptions/JoinBox" to="." method="_join"]
[connection signal="pressed" from="Buttons/RaceButton" to="." method="_optimist"]
